--- a/chitty.html
+++ b/chitty.html
@@ -9,12 +9,9 @@
 </head>
 <body>
     <div>
-        <h1>CHITTY</h1>
-            <p>Chitty es un boludo mal</p>
-        <h2>CANCER</h2>
-            <p>no</p>
-        <h3>Chitty?</h3>
-            <p>Drirdo</p>
+        <h1>QUIEN ES CHITTY </h1>
+        <p>Si queres conocerlo toca el link</p>
+       <a href="https://www.instagram.com/juan__chitty/">Conoce a Chitty</a>
     </div>
 </body>
 </html>
