--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div>
         <h1>SORTEO ULTIMAS ENTRADAS ECLIPS3</h1>
-            <p>Ingresa tu nombre para participar en el sorteo de las ultimas entradas de ECLIPS3
-                para el show del 25/04 en Buenos Aires</p>
+            <p>Ingresa tu nombre para participar en el sorteo de las ultimas entradas de OOO
+                pagina para probar a ver</p>
 
 
 
